@@ -1,5 +1,7 @@
 Revision history for App-gh
 
+        Understand link to github in fork command (CHORNY)
+
 0.01    Date/time
         First version, released on an unsuspecting world.
 
